# plonky2-bls12-381-pairing

./: Cargo.toml
src/: global_constants.rs  global_helpers.rs  lib.rs  main.rs  miller_loop_native.rs  miller_loop_native_optimized.rs  miller_loop_target.rs
src/curves/: g1_curve_target.rs  g2_curve_target.rs  mod.rs
src/fields/: bls12_381base.rs  fq12_target.rs  fq2_target.rs  fq6_target.rs  fq_target.rs  mod.rs  my_fq6.rs
src/fields_as_trees/: fq12_target_tree.rs  fq2_target_tree.rs  fq6_target_tree.rs  g1_curve.rs  g2_curve.rs  miller_loop.rs  mod.rs
src/utils/: constants.rs  helpers.rs
