[package]
name = "plonky2-bls12-381-pairing"
edition = "2021"

[dependencies]
plonky2-bls12-381={ git = "https://github.com/metacraft-labs/plonky2-bn254.git" }
plonky2_ecdsa={ git="https://github.com/InternetMaximalism/plonky2", rev="541e127" }
plonky2_u32={ git="https://github.com/InternetMaximalism/plonky2", rev="541e127" }
plonky2={ git="https://github.com/InternetMaximalism/plonky2", rev="541e127" }
anyhow = "1.0.71"
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-std = "0.4.0"
itertools = "0.12.1"
rand = "0.8.5"
num-bigint = "0.4.4"
num = "0.4.0"
num-traits = "0.2"
subtle = "2.5.0"
serde = { version = "1.0", features = ["derive"] }